--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,5 +5,7 @@
     </head>
     <body>
         <h1>About Us!</h1>
+        <h2>Dhrumil Mehta</h2>
+        <p>Dhrumil is blah blah ....</p>
     </body>
 </html>
